--- a/login.html
+++ b/login.html
@@ -115,11 +115,11 @@ function sendData(data) {
 	function readyStateChange() {
 		if(req.readyState !== 4) return;
 		if(req.status !== 200) return;
-		data = JSON.parse(req.responseText);
-		if(data.error) {
-			return alert(data.error);
-		}
-		//window.location.href = '/game';
+    var body = JSON.parse(req.responseText);
+    if(body.error){
+      return alert(body.error)
+    }
+		window.location.href = '/game';
 	}
 	req.onreadystatechange = readyStateChange;
 	// Sending the data in JSON format
