--- a/game.html
+++ b/game.html
@@ -47,9 +47,28 @@
     <script src='/js/socket.io.js'></script>
 		<script>
       var socket = io();
+			//stuff that doesn't work --> authentication w/ password, and game :/
+
 			var $canvas = document.querySelector('canvas');
 			$canvas.width = window.screen.width;
 			$canvas.height = window.screen.height;
+
+			var $input = document.querySelector('input');
+			document.body.addEventListener('keypress', sendMessage);
+
+			function sendMessage(e){
+				if(e.key !== 'Enter') return;
+				if(document.activeElement.tag !== 'INPUT') return;
+				if($input.value === '') return;
+				socket.emit('message', $input.value);
+				$input.value == '';
+			}
+			socket.on('newMessage', (message) => {
+				var $ul = document.querySelector('#chat ul');
+				var $li = document.createElement('li');
+				$li.innerText = message;
+				$ul.appendChild($li)
+			});
 		</script>
 	</body>
 </html>
