--- a/hmwkuser1.html
+++ b/hmwkuser1.html
@@ -50,7 +50,7 @@
 					return;
 				}
 				var req = new XMLHttpRequest();
-				req.open('POST', '/hmwkuser1', true);
+				req.open('POST', '/signup', true);
 				req.setRequestHeader('content-type', 'application/json');
 				function readyStateChange() {
 					if(req.readyState !== 4) return;
