--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
       }
 
       button:hover{
-        background-color:#EE7600;
+        background-color:#923B36;
         cursor:pointer;
       }
 
@@ -131,6 +131,10 @@ function sendData(data) {
         }
         var $button = document.querySelector('button')
         $button.addEventListener('click', submit)
+
+        var error = window.location.search.replace('?error=','')
+        if(error) alert(decodeURIComponent(error));
+
         </script>
   </body>
 </html>
